--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="main">
        <div class="title-img">
         <img src="orange2cat.jpg" alt="orange2cat">
+        <img src="title-image3-1.jpg" alt="orange2cat"> 
        </div>
     </div> 
 
