--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
        <div class="title-img">
         <img src="title-image3-1.jpg" alt="orange2cat"> 
         <img src="orange2cat.jpg" alt="orange2cat">  
-        <img src="地図5リーフレット用.png" alt="地図"> 
+        <img src="地図5リーフレット用.png" alt="地図"> <!-- 画像の名前が日本語でもちゃんと反映される事が証明された -->
        </div>
     </div> 
 
